# OpenCL

./: .gitignore  Defines.hs  LICENSE  OpenCL.cabal  README  Setup.hs  configure  configure.ac
Foreign/: OpenCL.hs
Foreign/OpenCL/: CommandQueue.chs  Context.hs  Device.hs  Error.hs  Event.hs  Kernel.hs  Memory.hs  Platform.hs  Program.chs  Raw.hs  Sampler.hs  Utils.hs  V10.hs
Foreign/OpenCL/HighLevel/: V10.hs
Foreign/OpenCL/HighLevel/V10/: Context.hs  Device.hs  Error.hs  Platform.hs  Utils.hs
Foreign/OpenCL/Raw/: C2HS.hs  Enums.chs  Error.chs  Functions.chs  Types.chs  V10.hs  inc_opencl.h
Foreign/OpenCL/Raw/Internal/: C2HS.hs  Types.chs
Foreign/OpenCL/Raw/V10/: Context.chs  Device.chs  Enums.chs  Error.chs  Platform.chs  Runtime.chs  Types.chs
Foreign/OpenCL/V10/: CommandQueue.chs  CommandQueue.hs  Context.hs  Device.hs  Error.hs  Event.hs  Kernel.hs  Memory.hs  Platform.hs  Program.hs  Sampler.hs  Utils.hs
emacs-snippets/: cl.yasnippet  fun.yasnippet  ptr.yasnippet  ret.yasnippet  retptr.yasnippet
samples/First sample/: Makefile  main.hs
samples/HighLevel/oclDeviceQuery/: oclDeviceQuery.hs
samples/Raw/oclDeviceQuery/: oclDeviceQuery.hs
samples/benchmarks/: testUtils.hs
samples/benchmarks/oclMatrixMul/: Makefile  matrixMul.cl  oclMatrixMul.hs
samples/benchmarks/oclVectorAdd/: Makefile  oclVectorAdd.hs  vectorAdd.cl
samples/memTest/: Makefile  memTest.hs
samples/oclDeviceQuery/: Makefile  main.hs  oclDeviceQuery.hs
samples/oclVectorAdd/: Makefile  oclVectorAdd.hs  vectorAdd.cl
