Name:                   OpenCL
Version:                0.0.5
Cabal-version:          >= 1.2
License:                BSD3
License-file:           LICENSE
Tested-with:            GHC >= 6.12.3

Build-type:             Custom
Extra-tmp-files:        config.status
                        config.log
Extra-source-files:     configure
                        configure.ac

Library
  Exposed-Modules:      Foreign.OpenCL.Raw.V10
                        Foreign.OpenCL.Raw.V10.Types
                        Foreign.OpenCL.Raw.V10.Enums
                        Foreign.OpenCL.Raw.V10.Platform
                        Foreign.OpenCL.Raw.V10.Device
                        Foreign.OpenCL.Raw.V10.Context
                        Foreign.OpenCL.Raw.V10.Runtime
                        Foreign.OpenCL.Raw.C2HS

                        Foreign.OpenCL.HighLevel.V10
                        Foreign.OpenCL.HighLevel.V10.Error
                        Foreign.OpenCL.HighLevel.V10.Platform
                        Foreign.OpenCL.HighLevel.V10.Device

  Build-tools:          c2hs >= 0.16.2
  Build-depends:        base >=4,
                        haskell98
  Include-dirs:         Foreign/OpenCL/Raw
