Name:                   OpenCL
Version:                0.0.7
Cabal-version:          >= 1.2
License:                BSD3
License-file:           LICENSE
Tested-with:            GHC >= 6.12.3

Build-type:             Custom
Extra-tmp-files:        config.status
                        config.log
Extra-source-files:     configure
                        configure.ac

Library
  Exposed-Modules:      Foreign.OpenCL.Raw
                        Foreign.OpenCL.Raw.Types
                        Foreign.OpenCL.Raw.Enums
                        Foreign.OpenCL.Raw.Functions
                        Foreign.OpenCL.Raw.C2HS

                        Foreign.OpenCL
                        Foreign.OpenCL.Error
                        Foreign.OpenCL.Utils
                        Foreign.OpenCL.Platform
                        Foreign.OpenCL.Device
                        Foreign.OpenCL.Context
                        Foreign.OpenCL.CommandQueue
                        Foreign.OpenCL.Memory
                        Foreign.OpenCL.Sampler
                        Foreign.OpenCL.Program
                        Foreign.OpenCL.Kernel
                        Foreign.OpenCL.Event

  Build-tools:          c2hs >= 0.16.2
  Build-depends:        base >=4
  Include-dirs:         Foreign/OpenCL/Raw
